--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,16 +1,17 @@
 apply plugin: 'com.android.library'
 
+def safeExtGet(prop, fallback) {
+    rootProject.ext.has(prop) ? rootProject.ext.get(prop) : fallback
+}
+
 android {
-    compileSdkVersion 28
+    compileSdkVersion safeExtGet('compileSdkVersion', 28)
 
     defaultConfig {
-        minSdkVersion 21
-        targetSdkVersion 28
+        minSdkVersion safeExtGet('minSdkVersion', 21)
+        targetSdkVersion safeExtGet('targetSdkVersion', 28)
         versionCode 2
         versionName "1.1"
-        ndk {
-            abiFilters "armeabi-v7a", "x86"
-        }
     }
 }
 
